--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-modal": "^3.16.1",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.20.1",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.4.2",
+    "recharts": "^2.10.3",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
